@@ -2,6 +2,11 @@
 
 	* twittering-mode.el: Fix a comment.
 
+	* twittering-mode.el: The properties for hashtags, mentions and
+	URIs are non-sticky.
+	(twittering-make-fontified-tweet-text): make the properties
+	non-sticky for the both direction.
+
 2011-08-27  Tadashi MATSUO  <tad@mymail.twin.jp>
 
 	* twittering-mode.el: A list timeline includes native retweets.
